2011-09-15  Guillaume Lazzara  <lazzara@caroussel.lrde.epita.fr>

	Adjust font size in PDF reconstruction.

	* demo/xml2doc/templates/html/main.xsl,
	* demo/xml2doc/templates/html/main_base64.xsl,
	* demo/xml2doc/templates/pdf/line.xsl: Here.

2011-09-13  Guillaume Lazzara  <z@lrde.epita.fr>

	* README: Add more information.

2011-09-13  Guillaume Lazzara  <z@lrde.epita.fr>

	* demo/viewer/main.cc: Fix an issue with Tesseract 2.x and
	specific locales.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Update SCRIBO tests w.r.t. the new version of lena.pgm.

	* tests/binarization/sauvola.ref.pbm,
	* tests/binarization/sauvola_ms.ref.pbm:
	Update reference outputs.

2011-06-09  Roland Levillain  <roland@lrde.epita.fr>

	Make SCRIBO's copyright headers uniform.

	* tests/data.hh.in: Here.

2011-09-14  Roland Levillain  <roland@lrde.epita.fr>

	Fix the distcleancheck target.

	* tests/binarization/Makefile.am (MOSTLYCLEANFILES): New.
	Add res.pbm.

2011-09-13  Roland Levillain  <roland@lrde.epita.fr>

	Fix the distribution w.r.t. Scribo's test images.

	* tests/Makefile.am (EXTRA_DIST): Add img/comp_on_borders.pbm,
	img/multi_scale.png, img/phillip.pbm, img/several_objects.pgm,
	img/single_object.pbm and img/the_valleys.pbm.
	Aesthetic changes.

2011-09-13  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix text justification in HTML document reconstruction.

	* demo/xml2doc/templates/html/css.css,
	* demo/xml2doc/templates/html/main.xsl,
	* demo/xml2doc/templates/html/main_base64.xsl: Add new CSS rules.

2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in Scribo.

	* demo/viewer/icons/olena_smaller.jpg,
	* demo/viewer/viewer.qrc: Change icon location.

	* scribo/text/paragraphs_closing.hh: Avoid a warning.

	* src/content_in_doc.cc: Fix a parameter description.

	* src/debug/show_lines_boldness.cc,
	* src/debug/show_text_lines.cc,
	* src/debug/show_text_lines_wo_seps.cc: Remove useless includes.

	* src/scribo-cli.in: Pass arguments correctly.
