@@ -1,3 +1,13 @@
+2011-09-19  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Fix paths in the SCRIBO viewer.
+
+	* demo/viewer/demodir.hh.in (SCRIBO_PREFIX_BINDIR): Remove macro.
+	(SCRIBO_PREFIX_LIBEXECDIR): New macro.
+	* demo/viewer/runner.cc:
+	s/SCRIBO_PREFIX_BINDIR/SCRIBO_PREFIX_LIBEXECDIR/.
+	* demo/viewer/Makefile.am (do_subst): Substitute $libexecdir.
+
 2011-09-15  Guillaume Lazzara  <lazzara@caroussel.lrde.epita.fr>
 
 	Adjust font size in PDF reconstruction.
